# dm-jitaux

./: .gitignore  Cargo.toml  README.md  build.rs  hierarchy.html  hierarchy.js  opcode_counts.txt
.github/workflows/: linux_build_dmjit.yaml  linux_build_dmjit_auto.yaml  linux_build_dmjit_manual.yaml  linux_build_dmjit_pullrequest.yaml  linux_build_llvm.yaml  linux_build_rust.yaml  windows_build_dmjit.yaml
benches/: bench.rs
benches/testData/: bench_gas_mixture.dm
dmjit-macro/: Cargo.toml
dmjit-macro/src/: lib.rs
dockerbuild/ubuntu/dmjit/: Dockerfile
dockerbuild/ubuntu/llvm/: Dockerfile
src/: bench_utils.rs  codegen.rs  compile.rs  deopt.rs  dfa.rs  dmir.rs  dmir_annotate.rs  lib.rs  proc_meta.rs  ref_count.rs  ref_count2.rs  runtime.ll  sectionMemoryManagerBindings.cpp  sectionMemoryManagerBindings.hpp  section_memory_manager_bindings.rs  stack_map.rs  test_utils.rs  time.rs  tools.rs  variable_termination_pass.rs
src/pads/: debug.rs  deopt.rs  dm_types.rs  iterators.rs  lists.rs  mod.rs  signature_utils.rs  turfs.rs
test_common/: Cargo.toml
test_common/src/: lib.rs
tests/: base.rs  tests.rs
tests/testData/: bench.dm  common.dm  gas_mixture.dm  hook.dm  push_val.dm  test_abs.dm  test_add.dm  test_and_or.dm  test_args.dm  test_aug_op.dm  test_call_args.dm  test_call_dynamic.dm  test_call_global.dm  test_call_static.dm  test_cmp.dm  test_deopt.dm  test_div.dm  test_gas_mixture_share.dm  test_if_bool_ops.dm  test_inc_dec.dm  test_is.dm  test_is_turf.dmm  test_iterator.dm  test_jz.dm  test_list_binary_ops.dm  test_list_get_set.dm  test_list_new.dm  test_local_var.dm  test_loops.dm  test_mul.dm  test_new.dm  test_null_cmp.dm  test_ref_count.dm  test_round.dm  test_step.dm  test_step.dmm  test_sub.dm  test_tg_op.dm  test_total_moles.dm  test_turf_iterator.dm  (+1 more)
