[package]
name = "dmjit"
version = "0.1.0"
authors = ["Simon Ogorodnik <simon.ogorodnik@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auxtools = { path = "../auxtools/auxtools" }
simple-logging = { version = "2.0.2" }
log = { version = "0.4.14" }
log-panics = { version = "2", features = ["with-backtrace"] }
rayon = "1.5"
rand = "0.8.3"
measure_time = "0.6.0"
dmasm = { git = "https://github.com/ss220-space/dmasm", rev = "2393f82726ac3497b2e43fd7fa89a2fd12850591" }
inkwell = { git = "https://github.com/TheDan64/inkwell", default-features = false, branch = "master", features = ["llvm12-0", "target-x86"] }
llvm-sys = "120"
libc = "0.2.97"
typed-arena = "2.0.1"
criterion = { version = "0.3.5", optional = true}

[dev-dependencies]
test_common = { path = "test_common" }

[build-dependencies]
vergen = "5.1.17"
anyhow = "1.0.47"

[lib]
crate-type = ["cdylib"]
[[bench]]
name = "bench"
harness = false

[features]
default = ["test_time", "bench_utils"]
test_time = []
bench_utils = ["criterion"]