[package]
name = "dmjit"
version = "0.1.0"
authors = ["Simon Ogorodnik <simon.ogorodnik@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auxtools = { path = "../auxtools/auxtools" }
simple-logging = { version = "2.0.2" }
log = { version = "0.4.14" }
log-panics = { version = "2", features = ["with-backtrace"] }
rayon = "1.5"
rand = "0.8.3"
measure_time = "0.6.0"
dmasm = { git = "https://github.com/ss220-space/dmasm", rev = "709231411c5a7c41a2f40440aea77b9b6552caa1" }
inkwell = { git = "https://github.com/ss220-space/inkwell", rev = "f239a88e9c4e78ea990b9cef5ece2a60ff8f77d1", default-features = false, features = ["llvm12-0", "target-x86"] }
llvm-sys = "120.2.2"
libc = "0.2.97"
typed-arena = "2.0.1"
criterion = { version = "0.3.5", optional = true}
binrw = "0.8.0"
num_enum = "0.5.6"
itertools = "0.10.3"
dmjit-macro = { path = "./dmjit-macro" }
once_cell = "1.10.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", optional = true }

[dev-dependencies]
test_common = { path = "test_common" }

[build-dependencies]
vergen = "5.1.17"
anyhow = "1.0.47"
cc = "1.0.72"

[lib]
crate-type = ["cdylib"]
[[bench]]
name = "bench"
harness = false

[features]
default = ["test_time", "test_utils", "bench_utils", "tools"]
test_time = []
test_utils = ["winapi"]
bench_utils = ["criterion", "test_utils"]
tools = []

[profile.release]
lto = true
opt-level = 3

[profile.release-dist]
inherits = "release"